TestSuite/Scheduler/Correct/Optimize-3.tjp
project optimize "Simple Project" "$Id" 2000-01-01-0:00-GMT - 2000-01-31-0:00-GMT {
	timezone "GMT"
}

resource tux1 "Tux1"
resource tux2 "Tux2"

task t1 "Task1" {
  start 2000-01-04
	maxend 2000-01-10-18:00
	effort 5d
	allocate tux1
}

task t2 "Task2" {
	start 2000-01-10
	maxend 2000-01-17-18:00
	effort 5d
	allocate tux1
}

task t3 "Task3" {
	start 2000-01-02
	maxend 2000-01-14-18:00
	effort 4d
	allocate tux1 { alternative tux2 persistent }
}

htmltaskreport "Optimize-3.html" {
	columns name, start, end, daily
	notimestamp
	hideresource 0
}

